[package]
name = "garen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.136", features = ["derive"] }
regex = "1.5.4"
lazy_static = "1.4.0"
select = "0.5.0"
prettytable-rs = "^0.8"
clap = { version = "3.1.0", features = ["derive"] }